--- a/public/survey.html
+++ b/public/survey.html
@@ -156,18 +156,17 @@
 <script type="text/javascript">
 
  var newFriend;
-    //Create an array to hold all of our arrays, and push the current values into it
 
     $("#submit").on("click", function(){
 
-        var newFriend = {
+        newFriend = {
             name: $('#name').val().trim(),
             photo: $('#photo').val().trim(),
             scores: [($('#q1').val()),($('#q2').val()),($('#q3').val()),
                 ($('#q4').val()), ($('#q5').val()),($('#q6').val()),
                 ($('#q7').val()),($('#q8').val()),
-                ($('#q9').val()),($('#q10').val()),]
-        };
+                ($('#q9').val()),($('#q10').val())]
+            };
 
         var currentURL = window.location.origin;
 
