Modal added, but it is not working.

--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1>Lowered Expectations</h1>
+            <h1>With Friends Like These...</h1>
             <hr>
             <a href="/survey"><button type="button" class="btn btn-primary btn-large" id="survey">
                 <span class="glyphicon glyphicon-list-alt"></span>
