--- a/public/survey.html
+++ b/public/survey.html
@@ -150,7 +150,7 @@
     <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"
             data-toggle="modal" data-target=".bs-example-modal-lg">Submit</button>
 
-        <div class="modal fade bs-example-modal-lg" tabindex="-1" id="resultsModal" role="dialog" aria-labelledby="myLargeModalLabel">
+        <div id="resultsModal" class="modal fade"  role="dialog">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                 ...
